--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://jensenvembil.github,com/redirector",
+  "homepage": "https://jensenvembil.github.com/redirector",
   "name": "redirector",
   "version": "0.1.0",
   "private": true,
